--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,6 +19,6 @@ jobs:
     steps:
       - name: "Say Hello Mona it's Monday"
         # run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!"
-        run: echo "${{ github.ref }} and ${{ github.event.input.environment }}"
+        run: echo "${{ github.ref }} and ${{ github.event.inputs.environment }}"
         env:
           First_Name: Mona
